[gd_scene load_steps=2 format=3 uid="uid://eks5e1kqp2yu"]

[ext_resource type="Script" uid="uid://bnhorvp0m7vic" path="res://Levels/MainMenu.gd" id="1_6ucrw"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ucrw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
<<<<<<< HEAD
offset_right = 657.0
offset_bottom = 301.0
=======
offset_right = 1152.0
offset_bottom = 648.0
>>>>>>> 58b1cf1 (scaffold essential features)

[node name="vb" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/vb"]
layout_mode = 2
text = "Start Game"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/vb"]
layout_mode = 2

[node name="LeftPlayerPanel" type="VBoxContainer" parent="MarginContainer/vb/HBoxContainer"]
layout_mode = 2

[node name="SideLabel" type="Label" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel"]
layout_mode = 2
text = "Left Side"

[node name="AlgorithmPanel" type="VBoxContainer" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel"]
layout_mode = 2

[node name="AlgorithmLabel" type="Label" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel/AlgorithmPanel"]
layout_mode = 2
text = "Choose Algorithm"

[node name="HumanButton" type="Button" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel/AlgorithmPanel"]
layout_mode = 2
text = "Human"

[node name="DecisionTreeButton" type="Button" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel/AlgorithmPanel"]
layout_mode = 2
text = "DT"

[node name="DynamicScriptingButton" type="Button" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel/AlgorithmPanel"]
layout_mode = 2
text = "DS"

[node name="NDSButton" type="Button" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel/AlgorithmPanel"]
layout_mode = 2
text = "NDS"

[node name="LoadPanel" type="VBoxContainer" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel"]
layout_mode = 2

[node name="LoadLabel" type="Label" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel/LoadPanel"]
layout_mode = 2
text = "Load Saved"

[node name="SaveStatesContainer" type="VBoxContainer" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel/LoadPanel"]
layout_mode = 2

[node name="PercentageDisplay" type="HBoxContainer" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel"]
layout_mode = 2

[node name="PercentageLabel" type="Label" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel/PercentageDisplay"]
layout_mode = 2
text = "AI Performance:"

[node name="PercentageValue" type="Label" parent="MarginContainer/vb/HBoxContainer/LeftPlayerPanel/PercentageDisplay"]
layout_mode = 2
text = "100%"

[node name="RightPlayerPanel" type="VBoxContainer" parent="MarginContainer/vb/HBoxContainer"]
layout_mode = 2

[node name="SideLabel" type="Label" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel"]
layout_mode = 2
text = "Right Side"

[node name="AlgorithmPanel" type="VBoxContainer" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel"]
layout_mode = 2

[node name="AlgorithmLabel" type="Label" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel/AlgorithmPanel"]
layout_mode = 2
text = "Choose Algorithm"

[node name="HumanButton" type="Button" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel/AlgorithmPanel"]
layout_mode = 2
text = "Human"

[node name="DecisionTreeButton" type="Button" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel/AlgorithmPanel"]
layout_mode = 2
text = "DT"

[node name="DynamicScriptingButton" type="Button" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel/AlgorithmPanel"]
layout_mode = 2
text = "DS"

[node name="NDSButton" type="Button" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel/AlgorithmPanel"]
layout_mode = 2
text = "NDS"

[node name="LoadPanel" type="VBoxContainer" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel"]
layout_mode = 2

[node name="LoadLabel" type="Label" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel/LoadPanel"]
layout_mode = 2
text = "Load Saved"

[node name="SavedStatesContainer" type="VBoxContainer" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel/LoadPanel"]
layout_mode = 2

[node name="PercentageDisplay" type="HBoxContainer" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel"]
layout_mode = 2

[node name="PercentageLabel" type="Label" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel/PercentageDisplay"]
layout_mode = 2
text = "AI Performance:"

[node name="PercentageValue" type="Label" parent="MarginContainer/vb/HBoxContainer/RightPlayerPanel/PercentageDisplay"]
layout_mode = 2
text = "100%"

[node name="NDSAIPanel" type="VBoxContainer" parent="MarginContainer/vb/HBoxContainer"]
layout_mode = 2

[node name="NDSLabel" type="Label" parent="MarginContainer/vb/HBoxContainer/NDSAIPanel"]
layout_mode = 2
text = "NDS AI Parameters"

[node name="NDSInput" type="LineEdit" parent="MarginContainer/vb/HBoxContainer/NDSAIPanel"]
layout_mode = 2
placeholder_text = "Custom Inputs"

[node name="NDSDescription" type="Label" parent="MarginContainer/vb/HBoxContainer/NDSAIPanel"]
layout_mode = 2
text = "Neuro-Dynamic System Settings"

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/vb"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/vb/ButtonContainer"]
layout_mode = 2
text = "Save AI"

[node name="BackButton" type="Button" parent="MarginContainer/vb/ButtonContainer"]
layout_mode = 2
text = "Back"

[node name="PlayButton" type="Button" parent="MarginContainer/vb/ButtonContainer"]
layout_mode = 2
text = "PLAY
"

[node name="PreviewPanel" type="VBoxContainer" parent="MarginContainer/vb"]
layout_mode = 2

[node name="PreviewLabel" type="Label" parent="MarginContainer/vb/PreviewPanel"]
layout_mode = 2
text = "AI Performance Review"

[node name="PerformanceChart" type="TextureRect" parent="MarginContainer/vb/PreviewPanel"]
layout_mode = 2

[node name="DebugPanel" type="VBoxContainer" parent="MarginContainer/vb"]
layout_mode = 2

[node name="DebugToggleButton" type="Button" parent="MarginContainer/vb/DebugPanel"]
layout_mode = 2
text = "Toggle Debug Panel"

[node name="DebugLog" type="TextEdit" parent="MarginContainer/vb/DebugPanel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/vb/DebugPanel"]
layout_mode = 2

[node name="ClearLogButton" type="Button" parent="MarginContainer/vb/DebugPanel/HBoxContainer"]
layout_mode = 2
text = "Clear Log"

[node name="ExportLogButton" type="Button" parent="MarginContainer/vb/DebugPanel/HBoxContainer"]
layout_mode = 2
text = "Export Log"
